--- a/plugin.yml
+++ b/plugin.yml
@@ -14,46 +14,55 @@
 # ########################## #
 
 name: GoldToCash
-main: com.skyost.server.GoldToCashPlugin
+main: com.skyost.g2c.GoldToCashPlugin
 description: Convert ingots into dollars.
-version: 1.6
+version: 2.0
 depends: Vault
 author: Skyost
 website: http://dev.bukkit.org/bukkit-plugins/goldtocash
 commands:
  goldtocash:
   aliases: [gold2cash, g2c]
-  description: Convert ingots in hand to cash.
-  usage: Simply type /goldtocash, gold2cash or /g2c to convert all ingots in your hand to cash !
+  description: Convert items in hand to cash.
+  usage: Simply type /goldtocash, gold2cash or /g2c to convert all items in your hand to cash !
   permission: goldtocash.convert.goldtocash
  cashtogold:
   aliases: [cash2gold, c2g]
-  description: Convert cash you have in iron ingot, gold ingot, diamond or emerald.
-  usage: Simply type /cashtogold, cash2gold or /c2g <Item> to convert all your cash in iron ingot, gold ingot, diamond or emerald.
+  description: Convert your cash into item <Id>.
+  usage: Simply type /cashtogold, cash2gold or /c2g <ID> to convert all your cash into <ID>.
   permission: goldtocash.convert.cashtogold
  goldtocashconfig:
   aliases: [gold2cashconfig, g2cconfig, g2cc]
   description: Configure GoldToCash directly in the game.
   usage: Simply type /goldtocashconfig, gold2cashconfig, g2cconfig or g2cc <ConfigID> <Value> to configure your installation of GoldToCash !
   permission: goldtocash.config
+ price:
+  aliases: [p]
+  description: Used to know the price of an item.
+  usage: Simply type /price or /p <id> to know the price of the item.
+  permission: goldtocash.price
 permissions:
  goldtocash.*:
-  description: Give access to alls GoldToCash commands.
+  description: Give access to every GoldToCash commands.
   children:
    goldtocash.convert.goldtocash: true
    goldtocash.convert.cashtogold: true
    goldtocash.config: true
+   goldtocash.price: true
  goldtocash.convert.*:
-  description: Give access to alls GoldToCash convert commands.
+  description: Give access to every GoldToCash convert commands.
   children:
    goldtocash.convert.goldtocash: true
    goldtocash.convert.cashtogold: true
  goldtocash.convert.goldtocash:
   default: true
-  description: Allow you to convert ingots in hand to cash.
+  description: Allow you to convert items in hand to cash.
  goldtocash.convert.cashtogold:
   default: true
-  description: Allow you to convert ingots in hand to cash.
+  description: Allow you to convert your cash into items.
+ goldtocash.price:
+  default: true
+  description: Allow you to know the price of an item. 
  goldtocash.config:
   default: op
   description: Allow you to configure GoldToCash.
